@@ -48,7 +48,7 @@ import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentFactory;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.downsample.DownsampleConfig;
-import org.elasticsearch.xpack.core.downsample.RollupIndexerAction;
+import org.elasticsearch.xpack.core.downsample.DownsampleIndexerAction;
 import org.elasticsearch.xpack.core.rollup.action.RollupShardTask;
 
 import java.io.Closeable;
@@ -67,7 +67,7 @@ import static org.elasticsearch.core.Strings.format;
 /**
  * An indexer for downsampling that iterates documents collected by {@link TimeSeriesIndexSearcher},
  * computes the rollup buckets and stores the buckets in the downsampled index.
- *
+ * <p>
  * The documents collected by the {@link TimeSeriesIndexSearcher} are expected to be sorted
  * by _tsid in ascending order and @timestamp in descending order.
  */
@@ -78,18 +78,12 @@ class RollupShardIndexer {
 
     private final IndexShard indexShard;
     private final Client client;
-    private final DownsampleConfig config;
     private final String rollupIndex;
-
     private final Engine.Searcher searcher;
     private final SearchExecutionContext searchExecutionContext;
     private final MappedFieldType timestampField;
     private final DocValueFormat timestampFormat;
     private final Rounding.Prepared rounding;
-
-    private final String[] dimensionFields;
-    private final String[] metricFields;
-    private final String[] labelFields;
     private final List<FieldValueFetcher> fieldValueFetchers;
     private final RollupShardTask task;
     private volatile boolean abort = false;
@@ -101,18 +95,13 @@ class RollupShardIndexer {
         ShardId shardId,
         String rollupIndex,
         DownsampleConfig config,
-        String[] dimensionFields,
         String[] metricFields,
         String[] labelFields
     ) {
         this.task = task;
         this.client = client;
         this.indexShard = indexService.getShard(shardId.id());
-        this.config = config;
         this.rollupIndex = rollupIndex;
-        this.dimensionFields = dimensionFields;
-        this.metricFields = metricFields;
-        this.labelFields = labelFields;
         this.searcher = indexShard.acquireSearcher("downsampling");
         Closeable toClose = searcher;
         try {
@@ -138,11 +127,11 @@ class RollupShardIndexer {
         }
     }
 
-    public RollupIndexerAction.ShardRollupResponse execute() throws IOException {
+    public DownsampleIndexerAction.ShardDownsampleResponse execute() throws IOException {
         long startTime = System.currentTimeMillis();
         BulkProcessor bulkProcessor = createBulkProcessor();
         try (searcher; bulkProcessor) {
-            final TimeSeriesIndexSearcher timeSeriesSearcher = new TimeSeriesIndexSearcher(searcher, List.of(() -> { checkCancelled(); }));
+            final TimeSeriesIndexSearcher timeSeriesSearcher = new TimeSeriesIndexSearcher(searcher, List.of(this::checkCancelled));
             TimeSeriesBucketCollector bucketCollector = new TimeSeriesBucketCollector(bulkProcessor);
             bucketCollector.preCollection();
             timeSeriesSearcher.search(new MatchAllDocsQuery(), bucketCollector);
@@ -171,7 +160,7 @@ class RollupShardIndexer {
             );
         }
 
-        return new RollupIndexerAction.ShardRollupResponse(indexShard.shardId(), task.getNumIndexed());
+        return new DownsampleIndexerAction.ShardDownsampleResponse(indexShard.shardId(), task.getNumIndexed());
     }
 
     private void checkCancelled() {
@@ -198,9 +187,7 @@ class RollupShardIndexer {
             public void afterBulk(long executionId, BulkRequest request, BulkResponse response) {
                 task.addNumIndexed(request.numberOfActions());
                 if (response.hasFailures()) {
-                    List<BulkItemResponse> failedItems = Arrays.stream(response.getItems())
-                        .filter(BulkItemResponse::isFailed)
-                        .collect(Collectors.toList());
+                    List<BulkItemResponse> failedItems = Arrays.stream(response.getItems()).filter(BulkItemResponse::isFailed).toList();
                     task.addNumFailed(failedItems.size());
 
                     Map<String, String> failures = failedItems.stream()
@@ -250,7 +237,7 @@ class RollupShardIndexer {
 
         TimeSeriesBucketCollector(BulkProcessor bulkProcessor) {
             this.bulkProcessor = bulkProcessor;
-            List<AbstractRollupFieldProducer> rollupFieldProducers = fieldValueFetchers.stream()
+            List<AbstractDownsampleFieldProducer> rollupFieldProducers = fieldValueFetchers.stream()
                 .map(FieldValueFetcher::rollupFieldProducer)
                 .toList();
             this.rollupBucketBuilder = new RollupBucketBuilder(rollupFieldProducers);
@@ -263,7 +250,7 @@ class RollupShardIndexer {
             docCountProvider.setLeafReaderContext(ctx);
 
             // For each field, return a tuple with the rollup field producer and the field value leaf
-            final List<Tuple<AbstractRollupFieldProducer, FormattedDocValues>> fieldValueTuples = fieldValueFetchers.stream()
+            final List<Tuple<AbstractDownsampleFieldProducer, FormattedDocValues>> fieldValueTuples = fieldValueFetchers.stream()
                 .map(fetcher -> Tuple.tuple(fetcher.rollupFieldProducer(), fetcher.getLeaf(ctx)))
                 .toList();
 
@@ -333,8 +320,8 @@ class RollupShardIndexer {
                     final int docCount = docCountProvider.getDocCount(docId);
                     rollupBucketBuilder.collectDocCount(docCount);
                     // Iterate over all field values and collect the doc_values for this docId
-                    for (Tuple<AbstractRollupFieldProducer, FormattedDocValues> tuple : fieldValueTuples) {
-                        AbstractRollupFieldProducer rollupFieldProducer = tuple.v1();
+                    for (Tuple<AbstractDownsampleFieldProducer, FormattedDocValues> tuple : fieldValueTuples) {
+                        AbstractDownsampleFieldProducer rollupFieldProducer = tuple.v1();
                         FormattedDocValues docValues = tuple.v2();
                         rollupFieldProducer.collect(docValues, docId);
                     }
@@ -384,28 +371,28 @@ class RollupShardIndexer {
         private int tsidOrd = -1;
         private long timestamp;
         private int docCount;
-        private final List<AbstractRollupFieldProducer> rollupFieldProducers;
+        private final List<AbstractDownsampleFieldProducer> rollupFieldProducers;
 
-        RollupBucketBuilder(List<AbstractRollupFieldProducer> rollupFieldProducers) {
+        RollupBucketBuilder(List<AbstractDownsampleFieldProducer> rollupFieldProducers) {
             this.rollupFieldProducers = rollupFieldProducers;
         }
 
         /**
          * tsid changed, reset tsid and timestamp
          */
-        public RollupBucketBuilder resetTsid(BytesRef tsid, int tsidOrd, long timestamp) {
+        public void resetTsid(BytesRef tsid, int tsidOrd, long timestamp) {
             this.tsid = BytesRef.deepCopyOf(tsid);
             this.tsidOrd = tsidOrd;
-            return resetTimestamp(timestamp);
+            resetTimestamp(timestamp);
         }
 
         /**
          * timestamp change, reset builder
          */
-        public RollupBucketBuilder resetTimestamp(long timestamp) {
+        public void resetTimestamp(long timestamp) {
             this.timestamp = timestamp;
             this.docCount = 0;
-            this.rollupFieldProducers.forEach(AbstractRollupFieldProducer::reset);
+            this.rollupFieldProducers.forEach(AbstractDownsampleFieldProducer::reset);
             if (logger.isTraceEnabled()) {
                 logger.trace(
                     "New bucket for _tsid: [{}], @timestamp: [{}]",
@@ -413,7 +400,6 @@ class RollupShardIndexer {
                     timestampFormat.format(timestamp)
                 );
             }
-            return this;
         }
 
         public void collectDocCount(int docCount) {
@@ -431,11 +417,10 @@ class RollupShardIndexer {
             builder.field(timestampField.name(), timestampFormat.format(timestamp));
             builder.field(DocCountFieldMapper.NAME, docCount);
             // Extract dimension values from _tsid field, so we avoid loading them from doc_values
-            @SuppressWarnings("unchecked")
-            Map<String, Object> dimensions = (Map<String, Object>) DocValueFormat.TIME_SERIES_ID.format(tsid);
-            for (Map.Entry<String, Object> e : dimensions.entrySet()) {
+            Map<?, ?> dimensions = (Map<?, ?>) DocValueFormat.TIME_SERIES_ID.format(tsid);
+            for (Map.Entry<?, ?> e : dimensions.entrySet()) {
                 assert e.getValue() != null;
-                builder.field(e.getKey(), e.getValue());
+                builder.field((String) e.getKey(), e.getValue());
             }
 
             /*
@@ -444,8 +429,8 @@ class RollupShardIndexer {
              * name. If grouping yields multiple rollup field producers, we delegate serialization to
              * the AggregateMetricFieldSerializer class.
              */
-            List<RollupFieldSerializer> groupedProducers = rollupFieldProducers.stream()
-                .collect(groupingBy(AbstractRollupFieldProducer::name))
+            List<DownsampleFieldSerializer> groupedProducers = rollupFieldProducers.stream()
+                .collect(groupingBy(AbstractDownsampleFieldProducer::name))
                 .entrySet()
                 .stream()
                 .map(e -> {
@@ -458,7 +443,7 @@ class RollupShardIndexer {
                 .toList();
 
             // Serialize fields
-            for (RollupFieldSerializer fieldProducer : groupedProducers) {
+            for (DownsampleFieldSerializer fieldProducer : groupedProducers) {
                 fieldProducer.write(builder);
             }
 
